--- a/JSP_Project/.project
+++ b/JSP_Project/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Jsp_Practice</name>
+	<name>JSP_Project</name>
 	<comment></comment>
 	<projects>
 	</projects>
